public class App {
    public static void main(String[] args){
        new LibraryManager().startLibraryManager();
    }
}
